# AgentLoopTemplate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  agentloop  agentloop.mk  makefile  plan.md  pyproject.toml
.agentloop/: AGENTS.agentloop.md  config.yaml  plan.yaml  state.md  state.yaml  tasks.yaml
.agentloop/oci/implementer/: Containerfile
.agentloop/prompts/agents/: adversarial-reviewer.md  architect.md  implementer.md
.agentloop/prompts/commands/: build.md  design.md  onboard.md  req.md  revise.md  status.md  tasks.md  verify.md
.agentloop/prompts/rules/: gate-workflow.md
.agentloop/schema/: config.schema.json  event.schema.json  plan.schema.json  review.schema.json  state.schema.json  tasks.schema.json
.claude/: settings.json
.claude/agents/: adversarial-reviewer.md  architect.md  implementer.md  requirements-analyst.md
.claude/commands/: build.md  design.md  onboard.md  req.md  revise.md  status.md  tasks.md  verify.md
.github/agents/: adversarial-reviewer.agent.md
.github/hooks/: agentloop.json
.github/instructions/: agentloop.instructions.md
.github/prompts/: build.prompt.md  design.prompt.md  revise.prompt.md  tasks.prompt.md  verify.prompt.md
.github/workflows/: audit.yml  ci.yml  release.yml
backend/sample_func/: sample1.py
backend/utils/: README.md
docs/: 00-product-brief.md  05-current-state.md  09-trust-and-sandbox.md  10-requirements.md  20-design.md  retrospective.md
docs/archive/agentloop-0.8.x-migration/: state.md
docs/decisions/: ADR-template.md
docs/notes/: agents-core-split.md  ponytail-comparison.md
docs/tasks/: T-template.md
docs/test/: test-plan.md
scripts/: README.md
scripts/agentloop/: adopt.py  agent_cli.py  approve.py  build_loop.py  cli.py  common.py  cycle.py  dag.py  doctor.py  events.py  feedback.py  gate_guard.py  init.py  issue_sync.py  pr_draft.py  revise.py  status_api.py  template_lint.py  test_adopt.py  test_agent_cli.py  test_approve.py  test_build_loop.py  test_cli.py  test_common.py  test_cycle.py  test_dag.py  test_doctor.py  test_events.py  test_feedback.py  test_gate_guard.py  test_init.py  test_issue_sync.py  test_pr_draft.py  test_revise.py  test_status_api.py  test_template_lint.py  test_ui.py  ui.py
scripts/agentloop/ui_assets/: app.js
src/agentloop/: __init__.py  actual_extraction.py  adopt.py  agent_cli.py  approve.py  attestations.py  build_git.py  build_loop.py  build_prompts.py  cli.py  cold_maintainer.py  common.py  conformance.py  control_plane.py  cycle.py  dag.py  dag_render.py  dag_trace.py  data.py  diff_facts.py  digests.py  doctor.py  event_chain.py  events.py  evidence.py  executors.py  gate_guard.py  human_review.py  init.py  init_cmd.py  install.py  issue_sync.py  lock.py  mdlite.py  models.py  oci_cli.py  oracle_bundle.py  oracle_cli.py  oracles.py  plan_review.py  (+16 more)
src/agentloop/data/: CHANGELOG.md
src/agentloop/data/integrations/claude/: settings.json
src/agentloop/data/integrations/claude/agents/: adversarial-reviewer.md  implementer.md
src/agentloop/data/integrations/claude/commands/: build.md  design.md  onboard.md  req.md  verify.md
src/agentloop/data/integrations/copilot/agents/: adversarial-reviewer.agent.md  architect.agent.md  implementer.agent.md  requirements-analyst.agent.md
src/agentloop/data/integrations/copilot/hooks/: agentloop.json
src/agentloop/data/integrations/copilot/instructions/: agentloop.instructions.md
src/agentloop/data/integrations/copilot/prompts/: onboard.prompt.md  req.prompt.md  revise.prompt.md  status.prompt.md  tasks.prompt.md  verify.prompt.md
src/agentloop/data/oci/python/: Containerfile
src/agentloop/data/oci/reviewer/: Containerfile
src/agentloop/data/prompts/agents/: requirements-analyst.md
src/agentloop/data/prompts/commands/: build.md  design.md  onboard.md  req.md  revise.md  status.md  tasks.md  verify.md
src/agentloop/data/prompts/rules/: gate-workflow.md
src/agentloop/data/rules/: AGENTS.md
src/agentloop/data/scaffold/agentloop/: config.yaml  plan.yaml  review.yaml  state.md  state.yaml  tasks.yaml
src/agentloop/data/scaffold/docs/: 05-current-state.md  10-requirements.md  20-design.md  retrospective.md
src/agentloop/data/scaffold/docs/decisions/: ADR-template.md
src/agentloop/data/scaffold/docs/tasks/: T-template.md
src/agentloop/data/scaffold/docs/test/: test-plan.md
src/agentloop/data/schema/: attestation.schema.json  config.schema.json  event.schema.json  tasks.schema.json
src/agentloop/ui_assets/: api.js  app.css  app.js  index.html  notify.js  view-activity.js  view-overview.js  view-review.js  view-tasks.js
tests/: _support.py  conftest.py  test_adopt.py  test_agent_cli.py  test_approve.py  test_attestations.py  test_build_loop.py  test_cli.py  test_common.py  test_control_plane.py  test_cycle.py  test_dag.py  test_data.py  test_diff_facts.py  test_digests.py  test_doctor.py  test_e2e_adversarial.py  test_event_chain.py  test_events.py  test_evidence.py  test_executors.py  test_gate_guard.py  test_human_review.py  test_init.py  test_init_cmd.py  test_install.py  test_issue_sync.py  test_lock.py  test_mdlite.py  test_models.py  test_oracle_bundle.py  test_oracles.py  test_policy_check.py  test_pr_draft.py  test_providers.py  test_registry.py  test_repo.py  test_review.py  test_review_api.py  test_review_policy.py  (+8 more)
