[project]
name = "project-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# The template's floor, not a recommendation: the agentloop tooling runs on 3.10+ (verified by
# its test suite; feedback.py's `match` sets the minimum). Products may raise this freely — pin a
# single minor (">=3.13,<3.14" + .python-version) if you value reproducibility over range.
requires-python = ">=3.10"
dependencies = [
]

# installing Cuda Version
# [tool.uv]
# find-links = [
#     "https://download.pytorch.org/whl/cu128/torch",
#     "https://download.pytorch.org/whl/cu128/torchvision",
# ]
# extra-index-url = ["https://download.pytorch.org/whl/cu128"]

[tool.uv]
# Exclude versions newer than one week from upload from being installed.
# A cooldown to avoid just-published releases (supply-chain risk, early-release bugs).
# The value is relative to the current time and re-evaluated rolling on each resolve (uv lock / uv sync).
exclude-newer = "1 week"

[tool.ruff]
exclude = [".git", ".mypy_cache", ".venv", "third_party"]
line-length = 120
target-version = "py310"  # match requires-python's floor (keeps UP suggestions 3.10-safe)

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
python_version = "3.10"  # type-check against the floor so 3.11+ stdlib use is caught mechanically

[dependency-groups]
# Only what the template itself exercises (test / lint / type-check / hooks). Add your product's
# dev tooling (docs generators, schema libraries, ...) here when the product actually uses it.
dev = [
    "pytest>=9.0.3",
    "pre-commit>=4.6.0",
    "mypy>=2.1.0",
    "ruff>=0.15.16",
    # Used by scripts/agentloop/ deterministic orchestration (dag.py, build_loop.py, gate_guard.py)
    # to read config.yaml / tasks.yaml / state.md. Since it is only for the template's foundational tools,
    # it goes in dev rather than the product's own dependencies (types-pyyaml is the type stub).
    "pyyaml>=6.0",
    "types-pyyaml>=6.0.12.20260518",
]
